--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,11 @@ jobs:
       fail-fast: false
       matrix:
         name: [
-          "windows-py38",
+          "windows-py39",
           "windows-py313",
           "windows-pypy3",
 
-          "ubuntu-py38-pytestmain",
-          "ubuntu-py38",
+          "ubuntu-py39-pytestmain",
           "ubuntu-py39",
           "ubuntu-py310",
           "ubuntu-py311",
@@ -35,10 +34,10 @@ jobs:
         ]
 
         include:
-          - name: "windows-py38"
-            python: "3.8"
+          - name: "windows-py39"
+            python: "3.9"
             os: windows-latest
-            tox_env: "py38"
+            tox_env: "py39"
           - name: "windows-py313"
             python: "3.13"
             os: windows-latest
@@ -47,15 +46,10 @@ jobs:
             python: "pypy3.9"
             os: windows-latest
             tox_env: "pypy3"
-          - name: "ubuntu-py38"
-            python: "3.8"
+          - name: "ubuntu-py39-pytestmain"
+            python: "3.9"
             os: ubuntu-latest
-            tox_env: "py38"
-            use_coverage: true
-          - name: "ubuntu-py38-pytestmain"
-            python: "3.8"
-            os: ubuntu-latest
-            tox_env: "py38-pytestmain"
+            tox_env: "py39-pytestmain"
             use_coverage: true
           - name: "ubuntu-py39"
             python: "3.9"
@@ -87,7 +81,7 @@ jobs:
             tox_env: "pypy3"
             use_coverage: true
           - name: "ubuntu-benchmark"
-            python: "3.8"
+            python: "3.9"
             os: ubuntu-latest
             tox_env: "benchmark"
 
@@ -136,7 +130,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.x"
 
       - name: Install dependencies
         run: |
