--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=docs,py{38,39,310,311,312,313,py3},py{38}-pytest{main}
+envlist=docs,py{39,310,311,312,313,py3},py{39}-pytestmain
 
 [testenv]
 commands=
@@ -40,7 +40,7 @@ filterwarnings =
 
 [flake8]
 max-line-length=99
-min-python-version = 3.8
+min-python-version = 3.9
 
 [testenv:release]
 description = do a release, required posarg of the version number
