Add uv dependency management and dev tooling
- Add dependency-groups for dev and testing in pyproject.toml
- Configure uv to use both groups by default
- Add uv.lock for reproducible environments
- Update .gitignore for uv cache

This enables faster, more reliable dependency management using uv.
Tools like mypy and ruff are managed via pre-commit hooks.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,10 @@ readme = {file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.9"
 
 dynamic = ["version"]
-[project.optional-dependencies]
+[dependency-groups]
 dev = ["pre-commit", "tox"]
 testing = ["pytest", "pytest-benchmark", "coverage"]
+
 
 [tool.setuptools]
 packages = ["pluggy"]
@@ -66,6 +67,9 @@ known-local-folder = ["pluggy"]
 lines-after-imports = 2
 
 [tool.setuptools_scm]
+
+[tool.uv]
+default-groups = ["dev", "testing"]
 
 [tool.towncrier]
 package = "pluggy"
