--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,8 @@ jobs:
             tox_env: "py39"
           - name: "windows-py314"
             python: "3.14"
+          - name: "windows-py314t"
+            python: "3.14t"
             os: windows-latest
             tox_env: "py314"
           - name: "windows-pypy3"
