added pluggy/testing to .coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,7 @@
 include =
   pluggy/*
   src/pluggy/*
+  pluggy/testing/*
   testing/*
   */lib/python*/site-packages/pluggy/*
   */pypy*/site-packages/pluggy/*
